feat: update hero image and industrial visuals for a more authentic and professional feel

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Los Angeles HVAC Experts | Advanced Mechanical HVAC Services">
     <meta property="og:description"
         content="Professional HVAC repair and installation in Los Angeles & Southern California. Trusted Since 2008. Premium cooling and heating engineering.">
-    <meta property="og:image" content="/images/hvac-hero-v2.webp">
+    <meta property="og:image" content="/images/hvac-hero-urban.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -22,7 +22,7 @@
     <meta property="twitter:title" content="Advanced Mechanical HVAC Services | Expert Heating & Air Conditioning">
     <meta property="twitter:description"
         content="Professional HVAC repair, installation, and maintenance in Southern California. Trusted since 2008.">
-    <meta property="twitter:image" content="/images/hvac-hero-v2.webp">
+    <meta property="twitter:image" content="/images/hvac-hero-urban.png">
 
     <!-- Schema Markup for Local Business -->
     <script type="application/ld+json">
@@ -30,7 +30,7 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Advanced Mechanical HVAC Services",
-      "image": "/images/hvac-hero-v2.webp",
+      "image": "/images/hvac-hero-urban.png",
       "description": "Established in 2008, Advanced Mechanical provides premium HVAC solutions for residential and commercial properties across Southern California.",
       "telephone": "(818) 660-2481",
       "url": "https://advancedmechanical.us",
@@ -258,8 +258,8 @@
         <div class="av-palmdale-tech-grid">
             <!-- IMAGE -->
             <div class="av-palmdale-tech-photo">
-                <img src="/images/hvac-service-action.webp"
-                    alt="Advanced Mechanical - Professional HVAC Technician at Work"
+                <img src="/images/hvac-industrial-action.png"
+                    alt="Advanced Mechanical - Professional installation of commercial kitchen ventilation and HVAC systems"
                     style="border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2);">
             </div>
 
