fix: make service details layout responsive and prevent 'smashed' look on mobile

--- a/services/kitchen-ventilation/index.html
+++ b/services/kitchen-ventilation/index.html
@@ -63,7 +63,7 @@
     <!-- Service Details -->
     <section class="service-details" style="padding: 100px 0;">
         <div class="container">
-            <div style="display: grid; grid-template-columns: 3fr 2fr; gap: 60px;">
+            <div class="service-details-grid">
                 <div class="details-content">
                     <h2>Established Commercial Specialty</h2>
                     <p style="font-size: 1.1rem; line-height: 1.8; color: #444; margin-bottom: 25px;">
