--- a/services/maintenance/index.html
+++ b/services/maintenance/index.html
@@ -62,7 +62,7 @@
     <!-- Service Details -->
     <section class="service-details" style="padding: 100px 0;">
         <div class="container">
-            <div style="display: grid; grid-template-columns: 3fr 2fr; gap: 60px;">
+            <div class="service-details-grid">
                 <div class="details-content">
                     <h2>Protect Your Investment</h2>
                     <p style="font-size: 1.1rem; line-height: 1.8; color: #444; margin-bottom: 25px;">
